fix: correct unbalanced <code> element spacing (#35344)
* fix: removed pseudo-elements and replaced with padding to fix unbalanced <code> element spacing

* fix: adjusted formatting to use white-space property instead of changing padding

--- a/client/src/components/layouts/layout.css
+++ b/client/src/components/layouts/layout.css
@@ -596,6 +596,7 @@ tt:before,
 tt:after {
   letter-spacing: -0.2em;
   content: ' ';
+  white-space: pre;
 }
 pre code:before,
 pre code:after,
